# docs/swagger.json
@@ -109,10 +109,6 @@
         "controller.AddScanRequest": {
             "type": "object",
             "properties": {
-                "datetime": {
-                    "type": "string",
-                    "example": "2022-07-23 11:23:55"
-                },
                 "place": {
                     "type": "string",
                     "example": "pokrovka"
@@ -120,6 +116,10 @@
                 "plate": {
                     "type": "string",
                     "example": "M343TT123"
+                },
+                "scanned_at": {
+                    "type": "string",
+                    "example": "2022-07-23 11:23:55"
                 }
             }
         },
@@ -145,7 +145,7 @@
             "properties": {
                 "created_at": {
                     "type": "string",
-                    "example": "2022-07-28 11:23:55"
+                    "example": "2022-07-28 11:23:55.999"
                 },
                 "id": {
                     "type": "integer",
@@ -164,7 +164,6 @@
                     "example": "2022-07-23 11:23:55"
                 },
                 "user_id": {
-                    "description": "VinId      sql.NullInt64 `json:\"vin_id,omitempty\" swaggertype:\"integer\"`",
                     "type": "integer",
                     "example": 234
                 }
